evaluate php sql injection

--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -21,7 +21,7 @@ RUN (cd binwalk && python setup.py install)
 
 ## ADD ADDITIONAL UTILITIES HERE ##
 
-RUN apt-get install php
+RUN apt-get install php -y
 
 # configure server files
 
